# ComfyUI-WildcardOrganizer

./: .comfyignore  README.md  nodes.py  pyproject.toml
docs/: comfy-registry-checklist.md  reddit-post-draft.md
js/: wildcard_organizer.js
